--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ __pycache__/
 .*_cache
 
 # ==============================
+# Build
+# ==============================
+dist/
+*egg-info
+
+
+# ==============================
 # config and secrets
 # ==============================
 **/.env
